--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "tailwindcss": "^1.2.0"
   },
   "scripts": {
-    "start": "npm run watch:css && react-scripts start",
+    "start": "npm run watch:css & react-scripts start",
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
